register form completed

--- a/views/partials/breadcrumb.hbs
+++ b/views/partials/breadcrumb.hbs
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="breadcrumb__links">
-          <a href="./index.html"><i class="fa fa-home"></i> Home</a>
+          <a href="/"><i class="fa fa-home"></i> Home</a>
           <a href="#">Women’s </a>
           <span>Essential structured blazer</span>
         </div>
