add views for men and women

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -96,7 +96,7 @@
 </section>
 
 <script>
-
+  document.getElementById("checkbox").required = true;
   function onChange() { const password =
   document.querySelector('input[name=password]'); const confirm =
   document.querySelector('input[name=confirm_password]'); if (confirm.value ===
