fine-tuning add&edit product form

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -96,10 +96,9 @@
 </section>
 
 <script>
-  document.getElementById("checkbox").required = true;
-  function onChange() { const password =
-  document.querySelector('input[name=password]'); const confirm =
-  document.querySelector('input[name=confirm_password]'); if (confirm.value ===
-  password.value) { confirm.setCustomValidity(''); } else {
+  document.getElementById("checkbox").required = true; function onChange() {
+  const password = document.querySelector('input[name=password]'); const confirm
+  = document.querySelector('input[name=confirm_password]'); if (confirm.value
+  === password.value) { confirm.setCustomValidity(''); } else {
   confirm.setCustomValidity('Passwords do not match'); } }
 </script>
