--- a/views/admin/addNewProduct.hbs
+++ b/views/admin/addNewProduct.hbs
@@ -58,11 +58,11 @@
                   class="custom-select tm-select-accounts"
                   id="category" 
                   name="category"
+                  style="text-transform: capitalize;"
                 >
-                  <option selected >Select category</option>
-                  <option value="1">New Arrival</option>
-                  <option value="2">Most Popular</option>
-                  <option value="3">Trending</option>
+                {{#each categories}}
+                  <option value="{{this.category}}">{{this.category}}</option>
+                {{/each}}
                 </select>
               </div>
               <div class="form-group mb-3">
@@ -71,10 +71,11 @@
                   class="custom-select tm-select-accounts"
                   id="gender" 
                   name="gender"
+                  style="text-transform: capitalize;"
                 >
-                  <option value="men">Men</option>
-                  <option value="women">Women</option>
-                  <option value="unisex">Unisex</option>
+                {{#each gender}}
+                  <option value="{{this.index}}">{{this.index}}</option>
+                {{/each}}
                 </select>
               </div>
               <div class="row">
