--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -68,11 +68,13 @@
                 <select
                   class="custom-select tm-select-accounts"
                   id="gender"
+                  name="gender"
                   value="{{product.gender}}"
+                  style="text-transform: capitalize;"
                 > <option>{{product.gender}}</option>
-                  <option value="men">Men</option>
-                  <option value="women">Women</option>
-                  <option value="unisex">Unisex</option>
+                {{#each gender}}
+                  <option value="{{this.index}}">{{this.index}}</option>
+                {{/each}}
                 </select>
               </div>
               <div class="form-group mb-3">
@@ -83,11 +85,13 @@
                 <select
                   class="custom-select tm-select-accounts"
                   id="category"
+                  name="category"
+                  style="text-transform: capitalize;"                 
+                  value="{{product.category}}"
                 >
-                  <option>Select category</option>
-                  <option value="1" selected>New Arrival</option>
-                  <option value="2">Most Popular</option>
-                  <option value="3">Trending</option>
+                {{#each categories}}
+                  <option value="{{this.category}}">{{this.category}}</option>
+                {{/each}}
                 </select>
               </div>
               <div class="row">
