--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,7 +9,7 @@
         />
       </div>
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-        <form method="post" action="">
+        <form method="post" action="/login">
           <!-- Email input -->
           <div class="form-outline mb-4">
             <label class="form-label" for="username">Username</label>
