--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -39,7 +39,7 @@
         <div class="tm-notification-items">
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-01.jpg"
+                src="/img/notification-01.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -55,7 +55,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-02.jpg"
+                src="/img/notification-02.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -71,7 +71,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-03.jpg"
+                src="/img/notification-03.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -87,7 +87,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-01.jpg"
+                src="/img/notification-01.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -102,7 +102,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-02.jpg"
+                src="/img/notification-02.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -117,7 +117,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-03.jpg"
+                src="/img/notification-03.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -132,7 +132,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-01.jpg"
+                src="/img/notification-01.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -147,7 +147,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-02.jpg"
+                src="/img/notification-02.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
@@ -162,7 +162,7 @@
           </div>
           <div class="media tm-notification-item">
             <div class="tm-gray-circle"><img
-                src="img/notification-03.jpg"
+                src="/img/notification-03.jpg"
                 alt="Avatar Image"
                 class="rounded-circle"
               /></div>
