--- a/views/admin/addNewProduct.hbs
+++ b/views/admin/addNewProduct.hbs
@@ -82,11 +82,11 @@
                 <div class="form-group mb-3 col-xs-12 col-sm-6">
                   <label
                     for="availability"
-                    >Availability
+                    >Quantity
                   </label>
                   <input
-                    id="availability"
-                    name="availability"
+                    id="quantity"
+                    name="quantity"
                     type="text"
                     class="form-control validate"
                     required
