--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -104,7 +104,7 @@
                         id="stock"
                         name="stock"
                         type="text"
-                        value="{{product.availability}}"
+                        value="{{product.quantity}}"
                         class="form-control validate"
                       />
                     </div>
