--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -23,8 +23,7 @@
                   <td class="tm-product-name"><a
                       href="/admin/products/{{this._id}}"
                     >{{this.name}}</a></td>
-                  <td>{{this.quantity}}</td>
-                  <td>{{this.availability}}</td>
+                  <td>{{this.sold}}</td>
                   <td>
                     <button
                       href=""
@@ -128,11 +127,18 @@
 <form name="deleteForm" method="POST"></form>
 
 <script>
-
-  document.addEventListener('DOMContentLoaded', function() { var productId; var
-  deleteProduct = document.getElementById('deleteProduct'); var deleteForm =
-  document.forms['deleteForm'] $('#deleteModal').on('show.bs.modal',
-  function(event) { var button = $(event.relatedTarget); productId =
-  button.data('id'); }); deleteProduct.onclick = function() { deleteForm.action
-  = '/admin/products/'+productId+'?_method=DELETE'; deleteForm.submit(); } });
+  document.addEventListener('DOMContentLoaded', function() { 
+    var productId;
+    var deleteProduct = document.getElementById('deleteProduct'); 
+    var deleteForm = document.forms['deleteForm'] 
+    $('#deleteModal').on('show.bs.modal', function(event) 
+      { 
+        var button = $(event.relatedTarget); 
+      productId = button.data('id'); 
+      }); 
+    deleteProduct.onclick = function() { 
+      deleteForm.action = '/admin/products/'+productId+'?_method=DELETE'; 
+      deleteForm.submit(); 
+      } 
+  });
 </script>
