--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -101,8 +101,8 @@
                         >Units In Stock
                       </label>
                       <input
-                        id="stock"
-                        name="stock"
+                        id="quantity"
+                        name="quantity"
                         type="text"
                         value="{{product.quantity}}"
                         class="form-control validate"
@@ -112,7 +112,7 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
               <div class="tm-product-img-edit mx-auto">
-                <img src="/img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
+                <img src="/img/{{product.imageLink}}.jpg" alt="Product image" class="img-fluid d-block mx-auto">
                 <i
                   class="fas fa-cloud-upload-alt tm-upload-icon"
                   onclick="document.getElementById('fileInput').click();"
