apply passport.js

--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -22,7 +22,7 @@
                 <tr>
 
                   <th scope="row"><input type="checkbox" /></th>
-                  <td>{{@index}}</td>
+                  <td>{{inc @index}}</td>
                   <td class="tm-product-name"><a
                       href="/admin/products/{{this._id}}"
                     >{{this.name}}</a></td>
